--- a/app/jade/include/mixin.jade
+++ b/app/jade/include/mixin.jade
@@ -367,26 +367,26 @@ mixin headerHotelPayment(step)
           if (step == 1)
             a.step.one.active(href="#") Details
           else
-            a.step.one(href="flight-payment-step-1.html") Details
+            a.step.one(href="hotel-payment-step-1.html") Details
 
           if (step == 2)
             a.step.two.active(href="#") Review
           else
-            a.step.two(href="flight-payment-step-2.html") Review
+            a.step.two(href="hotel-payment-step-2.html") Review
 
           if (step == 3)
             a.step.three.active(href="#") Payment
           else
-            a.step.three(href="flight-payment-step-3.html") Payment
+            a.step.three(href="hotel-payment-step-3.html") Payment
 
           if (step == 4)
             a.step.four.active(href="#") Process
           else
-            a.step.four(href="flight-payment-step-4.html") Process
+            a.step.four(href="hotel-payment-step-4.html") Process
 
           if (step == 5)
             a.step.five.active(href="#") E-Ticket
           else
-            a.step.five(href="flight-payment-step-5.html") E-Ticket
+            a.step.five(href="hotel-payment-step-5.html") E-Ticket
 
       .clearfix
