page book flights and hotels for payment bank transfer

--- a/app/less/mobile.less
+++ b/app/less/mobile.less
@@ -2,6 +2,7 @@
 @import "bootstrap/variables.less";
 @import "bootstrap/mixins.less";
 @import "bootstrap/normalize.less";
+@import "bootstrap/forms.less";
 
 @import "web/fonts.less";
 
