--- a/app/less/mobile/flight-booking.less
+++ b/app/less/mobile/flight-booking.less
@@ -293,6 +293,11 @@
       }
     }
   }
+
+  .bg-warn-msg {
+    background-color: #ffffcc;
+    line-height: 18px;
+  }
 }
 
 .flight-ticket-block,
