--- a/app/less/mobile/nav-tabs.less
+++ b/app/less/mobile/nav-tabs.less
@@ -1,5 +1,6 @@
 .tour-tabs,
-.hotel-tabs {
+.hotel-tabs,
+.static-page-tabs {
   .m-auto;
 
   .nav-tabs {
@@ -49,6 +50,22 @@
     }
   }
 }
+.static-page-tabs {
+  border-color: #ddd;
+  ul.nav-tabs {
+    > li {
+      width: 33.3%
+    }
+  }
+}
+
+#page-visa-document {
+  .flag-item {
+    -webkit-box-shadow: 0px 1px 4px rgba(216, 216, 216, 0.5);
+    box-shadow: 0px 1px 4px rgba(216, 216, 216, 0.5);
+  }
+}
+
 .tab-content {
   padding: 0;
 
