empty results page for flights and hotels

--- a/app/jade/hotel-detail.jade
+++ b/app/jade/hotel-detail.jade
@@ -529,7 +529,7 @@ block main
               span.text-orange among customers
 
             .popular-hotel-list
-              .hotem-item.m-b-md
+              .hotel-item.m-b-md
                 .column.pull-left.picture-thumb.pos-rlt
                   a(href="#")
                     img(src="img/destinations/hotel03.jpg", alt="")
@@ -562,7 +562,7 @@ block main
                   a.btn.f-bold.text-primary(href="hotel-detail.html") See Details
                 .clearfix
 
-              .hotem-item.m-b-md
+              .hotel-item.m-b-md
                 .column.pull-left.picture-thumb.pos-rlt
                   a(href="#")
                     img(src="img/destinations/hotel05.jpg", alt="")
@@ -595,7 +595,7 @@ block main
                   a.btn.f-bold.text-primary(href="hotel-detail.html") See Details
                 .clearfix
 
-              .hotem-item.m-b-md
+              .hotel-item.m-b-md
                 .column.pull-left.picture-thumb.pos-rlt
                   a(href="#")
                     img(src="img/destinations/hotel04.jpg", alt="")
