--- a/app/jade/hotels-search.jade
+++ b/app/jade/hotels-search.jade
@@ -112,7 +112,7 @@ block main
             |  out of&nbsp;
             strong.f-bold 800
           .search-result-hotel-block
-            .hotem-item.m-b-md
+            .hotel-item.m-b-md
               .column.pull-left.picture-thumb.pos-rlt
                 a(href="#")
                   img(src="img/destinations/hotel03.jpg", alt="")
@@ -156,7 +156,7 @@ block main
 
               .clearfix
 
-            .hotem-item.m-b-md
+            .hotel-item.m-b-md
               .column.pull-left.picture-thumb.pos-rlt
                 a(href="#")
                   img(src="img/destinations/hotel02.jpg", alt="")
@@ -198,7 +198,7 @@ block main
 
                 a.btn.f-bold.text-primary(href="hotel-detail.html") See Details
 
-            .hotem-item.m-b-md
+            .hotel-item.m-b-md
               .column.pull-left.picture-thumb.pos-rlt
                 a(href="#")
                   img(src="img/destinations/hotel01.jpg", alt="")
@@ -240,7 +240,7 @@ block main
 
                 a.btn.f-bold.text-primary(href="hotel-detail.html") See Details
 
-            .hotem-item.m-b-md
+            .hotel-item.m-b-md
               .column.pull-left.picture-thumb.pos-rlt
                 a(href="#")
                   img(src="img/destinations/hotel04.jpg", alt="")
@@ -282,7 +282,7 @@ block main
 
                 a.btn.f-bold.text-primary(href="hotel-detail.html") See Details
 
-            .hotem-item.m-b-md
+            .hotel-item.m-b-md
               .column.pull-left.picture-thumb.pos-rlt
                 a(href="#")
                   img(src="img/destinations/hotel05.jpg", alt="")
@@ -323,7 +323,7 @@ block main
 
                 a.btn.f-bold.text-primary(href="hotel-detail.html") See Details
 
-            .hotem-item.m-b-md
+            .hotel-item.m-b-md
               .column.pull-left.picture-thumb.pos-rlt
                 a(href="#")
                   img(src="img/destinations/hotel06.jpg", alt="")
@@ -364,7 +364,7 @@ block main
 
                 a.btn.f-bold.text-primary(href="hotel-detail.html") See Details
 
-            .hotem-item.m-b-md
+            .hotel-item.m-b-md
               .column.pull-left.picture-thumb.pos-rlt
                 a(href="#")
                   img(src="img/destinations/hotel07.jpg", alt="")
