--- a/app/less/web/hotels.less
+++ b/app/less/web/hotels.less
@@ -147,7 +147,7 @@
 
 .search-result-hotel-block,
 .popular-hotel-list {
-  .hotem-item {
+  .hotel-item {
     height: 130px;
     -webkit-box-shadow: 0px 0px 0px 1px #d8d8d8, 0px 4px 7px 0px rgba(216, 216, 216, 0.6);
     box-shadow: 0px 0px 0px 1px #d8d8d8, 0px 4px 7px 0px rgba(216, 216, 216, 0.6);
