empty results for tours search

--- a/app/jade/empty-results-hotels.jade
+++ b/app/jade/empty-results-hotels.jade
@@ -12,7 +12,7 @@ block main
           | Search
           span.text-yellow  Results
         .text-left.text-rounded.col-xs-6.text-right
-          a.text-orange.m-t-sm.block(href="flights.html") &#8592; BACK TO FLIGHTS
+          a.text-orange.m-t-sm.block(href="hotels.html") &#8592; BACK TO HOTELS
 
       .m-t-md.search-result-empty
         | Sorry, we can’t find any flight for your destination for now. Please try again later or enter a different search.
