--- a/app/css/sapta-tour.css
+++ b/app/css/sapta-tour.css
@@ -4625,7 +4625,7 @@ html[xmlns] .flexslider .slides {
 }
 .tour-list .rollover {
   z-index: 5;
-  top: 0;
+  top: 10px;
   left: 0;
   width: 299px;
   height: 349px;
@@ -7487,7 +7487,7 @@ html[xmlns] .flexslider .slides {
 .popular-hotel-on-empty-results .hotel-item .column.hotel-info .hotel-name {
   font-size: 16px;
   color: #393030;
-  line-height: 22px;
+  line-height: 20px;
 }
 .popular-hotel-on-empty-results .hotel-item .column.hotel-info .location {
   font-size: 10px;
@@ -7549,6 +7549,123 @@ html[xmlns] .flexslider .slides {
   color: #fff;
   line-height: 43px;
   background: #158ea3;
+}
+.tour-list-popular-empty-results {
+  border-top: 1px dashed #e5e5e5;
+}
+.tour-list-popular-empty-results .rollover {
+  z-index: 5;
+  top: 10px;
+  left: 0;
+  width: 299px;
+  height: 349px;
+  background-color: #fcbc56;
+  -webkit-transform: translateX(-309px);
+  -moz-transform: translateX(-309px);
+  -o-transform: translateX(-309px);
+  -ms-transform: translateX(-309px);
+  transform: translateX(-309px);
+  -webkit-transition: all 0.6s ease-in-out;
+  -o-transition: all 0.6s ease-in-out;
+  transition: all 0.6s ease-in-out;
+  -webkit-transition: all all 0.6s ease-in-out ease;
+  -moz-transition: all all 0.6s ease-in-out ease;
+  -ms-transition: all all 0.6s ease-in-out ease;
+  -o-transition: all all 0.6s ease-in-out ease;
+  transition: all all 0.6s ease-in-out ease;
+}
+.tour-list-popular-empty-results .rollover .cities a,
+.tour-list-popular-empty-results .rollover .calendar a {
+  padding: 0 10px;
+  margin-bottom: 5px;
+  line-height: 12px;
+  color: #393030;
+  border-right: 1px solid #d38328;
+}
+.tour-list-popular-empty-results .rollover .cities a:hover,
+.tour-list-popular-empty-results .rollover .calendar a:hover {
+  color: #fff;
+  text-decoration: none;
+}
+.tour-list-popular-empty-results .rollover .more-details {
+  color: #98400c;
+  display: inline-block;
+  line-height: 25px;
+  border-bottom: 1px solid #98400c;
+}
+.tour-list-popular-empty-results .rollover .more-details:hover {
+  text-decoration: none;
+}
+.tour-list-popular-empty-results .dealinfo {
+  background: #fcbc56;
+  color: #393030;
+  font-family: "Gotham Black";
+  position: relative;
+  height: 182px;
+  margin-bottom: 10px;
+  margin-top: -10px;
+}
+.tour-list-popular-empty-results .dealinfo label {
+  font-weight: 300;
+  font-size: 10px;
+  font-family: "Gotham Book";
+}
+.tour-list-popular-empty-results .dealinfo .title {
+  font-size: 18px;
+  color: #393030;
+}
+.tour-list-popular-empty-results .dealinfo a {
+  text-decoration: none;
+}
+.tour-list-popular-empty-results .dealinfo label {
+  color: #8f3000;
+}
+.tour-list-popular-empty-results .tour-item {
+  overflow-y: hidden;
+  position: relative;
+  border-right: 1px dashed #e5e5e5;
+  border-bottom: 1px dashed #e5e5e5;
+  border-left: 1px dashed #e5e5e5;
+}
+.tour-list-popular-empty-results .tour-item:before,
+.tour-list-popular-empty-results .tour-item:after {
+  content: " ";
+  display: table;
+}
+.tour-list-popular-empty-results .tour-item:after {
+  clear: both;
+}
+.tour-list-popular-empty-results .tour-item .rollover {
+  width: 298px;
+  -webkit-transform: translateX(-308px);
+  -moz-transform: translateX(-308px);
+  -o-transform: translateX(-308px);
+  -ms-transform: translateX(-308px);
+  transform: translateX(-308px);
+}
+.tour-list-popular-empty-results .tour-item:nth-child(2n) {
+  border-right: 0;
+  border-left: 0;
+}
+.tour-list-popular-empty-results .tour-item .pos-rlt.wrapping {
+  overflow: hidden;
+  background: #fff;
+}
+.tour-list-popular-empty-results .tour-item figure {
+  height: 245px;
+  margin-bottom: 10px;
+  margin-top: 10px;
+}
+.tour-list-popular-empty-results .tour-item img {
+  width: 100%;
+  height: 100%;
+}
+.tour-list-popular-empty-results .tour-item:hover .rollover {
+  -webkit-transform: translateX(0);
+  -moz-transform: translateX(0);
+  -o-transform: translateX(0);
+  -ms-transform: translateX(0);
+  transform: translateX(0);
 }
 .datepicker {
   border-radius: 4px;
