--- a/app/less/web/empty-search.less
+++ b/app/less/web/empty-search.less
@@ -113,3 +113,125 @@
     }
   }
 }
+
+.tour-list-popular-empty-results {
+  .b-dashed-t-gray;
+
+  .rollover {
+    z-index: 5;
+    top: 10px;
+    left: 0;
+    width: 299px;
+    height: 349px;
+    background-color: #fcbc56;
+    -webkit-transform: translateX(-309px);
+    -moz-transform: translateX(-309px);
+    -o-transform: translateX(-309px);
+    -ms-transform: translateX(-309px);
+    transform: translateX(-309px);
+    .transition(all 0.6s ease-in-out);
+
+    .cities,
+    .calendar {
+      a {
+        padding: 0 10px;
+        margin-bottom: 5px;
+        line-height: 12px;
+        color: #393030;
+        border-right: 1px solid #d38328;
+        &:hover {
+          color: #fff;
+          text-decoration: none;
+        }
+      }
+    }
+    .more-details {
+      color: #98400c;
+      display: inline-block;
+      line-height: 25px;
+      border-bottom: 1px solid #98400c;
+      &:hover {
+        text-decoration: none;
+      }
+    }
+  }
+
+  .dealinfo {
+    background: #fcbc56;
+    color: #393030;
+    font-family: "Gotham Black";
+    position: relative;
+    height: 182px;
+    margin-bottom: 10px;
+    margin-top: -10px;
+
+    label {
+      font-weight: 300;
+      font-size: 10px;
+      font-family: "Gotham Book"
+    }
+
+    .title {
+      font-size: 18px;
+      color: #393030;
+    }
+
+
+    a {
+      text-decoration: none;
+    }
+
+    label {
+      color: #8f3000
+    }
+  }
+
+  .tour-item {
+    overflow-y: hidden;
+    position: relative;
+    .b-dashed-r-gray;
+    .b-dashed-b-gray;
+    .clearfix;
+    .b-dashed-l-gray;
+
+    .rollover {
+      width: 298px;
+      -webkit-transform: translateX(-308px);
+      -moz-transform: translateX(-308px);
+      -o-transform: translateX(-308px);
+      -ms-transform: translateX(-308px);
+      transform: translateX(-308px);
+    }
+
+    &:nth-child(2n) {
+      border-right: 0;
+      border-left: 0
+    }
+
+    .pos-rlt.wrapping {
+      overflow: hidden;
+      background: #fff;
+    }
+
+    figure {
+      height: 245px;
+      margin-bottom: 10px;
+      margin-top: 10px;
+    }
+
+    img {
+      width: 100%;
+      height: 100%;
+    }
+
+    &:hover {
+      .rollover {
+         -webkit-transform: translateX(0);
+         -moz-transform: translateX(0);
+         -o-transform: translateX(0);
+         -ms-transform: translateX(0);
+         transform: translateX(0);
+      }
+    }
+  }
+}
