--- a/app/jade-mobile/flights.jade
+++ b/app/jade-mobile/flights.jade
@@ -3,7 +3,7 @@ extends layouts/default
 include includes/mixin
 
 block main
-  .top-banner.hotels
+  .top-banner.flights
     span.block.text-center.m-b-sm.m-t-md
       i.ico.ico-mobile.ico-flight-md.m-t-xs
     h3.banner-title.text-u-c.text-center Great Value Fares
