--- a/app/less/mobile/main.less
+++ b/app/less/mobile/main.less
@@ -358,8 +358,10 @@ footer {
 
   &.hotels,
   &.blog,
+  &.flights,
   &.custom-tour {
     height: 130px;
+
     .banner-title {
       font-weight: 600;
       font-size: 17px;
