document details popup for visa tours

--- a/app/less/mobile.less
+++ b/app/less/mobile.less
@@ -10,6 +10,7 @@
 @import "mobile/spinner.less";
 
 @import "bootstrap/dropdowns.less";
+@import "bootstrap/modals.less";
 @import "plugins/datepicker";
 
 @import "mobile/helper.less";
