--- a/app/jade-mobile/tour-detail.jade
+++ b/app/jade-mobile/tour-detail.jade
@@ -141,7 +141,7 @@ block main
                 span.inline.currency.f-bold USD
                 span.inline.price 150
               .action.text-center
-                a.text-orange.text-u-c.text-xs(href='#') More
+                a.text-orange.text-u-c.text-xs(href='#', data-toggle="modal", data-target="#documentDetailPopup" ) More
             li
               .name Visa Europe
               .country.text-u-c WNI
@@ -149,7 +149,7 @@ block main
                 span.inline.currency.f-bold USD
                 span.inline.price 150
               .action.text-center
-                a.text-orange.text-u-c.text-xs(href='#') More
+                a.text-orange.text-u-c.text-xs(href='#', data-toggle="modal", data-target="#documentDetailPopup" ) More
 
         .text-center.m-b-lg
           a.btn.btn-white.text-14px.f-bold.m-auto(href="#") What’s Included in the Price
@@ -202,3 +202,27 @@ block main
 
         .text-center.m-b-lg
           a.btn.btn-white.text-14px.f-bold.m-auto(href="#") What’s Included in the Price
+
+    #documentDetailPopup.modal.fade(tabindex='-1', role='dialog')
+      .document-detail-popup.pos-rlt
+        h4.text-u-c.title-search.text-center.m-b-lg Dokumen Detail
+          a.close(href="/mobile", class="close", data-dismiss="modal", aria-label="Close") Close
+
+        .content
+          .m-t.m-b
+            .f-bold.text-u-c.text-md Dokumen yang dibutuhkan:
+
+          ol
+            li.m-b-md Passport Asli (Lama & Baru, Berlaku Diatas 6 Bulan)
+            li.m-b-md Foto 3 Lembar Berwarna Ukuran 3,5 X 4,5 Latar Belakang Putih
+            li.m-b-md Surat Sponsor
+            li.m-b-md Surat Referensi Bank
+            li.m-b-md Fotocopy Bukti Keuangan (3 Bulan Terakhir)
+            li.m-b-md Fotocopy SIUP (Jika Pemilik)
+            li.m-b-md Fotocopy KK
+            li.m-b-md Fotocopy KTP
+            li.m-b-md Fotocopy Akte Lahir
+            li.m-b-md Fotocopy Surat Ganti Nama (Jika Ada)
+            li.m-b-md Konfirmasi Hotel
+            li.m-b-md Asuransi Perjalanan
+            li.m-b-md Tidak Boleh Ada PENDUL ( ALAMAT PENDUDUK LUAR )
