make form find tours, flights, and hotels is as popup instead to load a pages

--- a/app/css/sapta-tour.mobile.css
+++ b/app/css/sapta-tour.mobile.css
@@ -5992,6 +5992,7 @@ footer a {
 .sapta-form.form-find .extra-field.tours .form-group-control .checkbox,
 .sapta-form.form-login .extra-field.tours .form-group-control .checkbox,
 .sapta-form.form-register .extra-field.tours .form-group-control .checkbox {
+  margin-top: 0;
   padding-top: 5px;
 }
 .sapta-form.form-find .checkout-date,
