--- a/app/jade-mobile/includes/footer.jade
+++ b/app/jade-mobile/includes/footer.jade
@@ -2,3 +2,9 @@ footer
   .block.m-r-sm.m-l-sm.text-u-c
     &copy; 2015 Sapta Tour.&nbsp;
     a(href="#") Terms &amp; Conditions
+
+include popup-find-tours
+
+include popup-find-flights
+
+include popup-find-hotels
