--- a/app/jade-mobile/includes/header.jade
+++ b/app/jade-mobile/includes/header.jade
@@ -10,15 +10,15 @@ header.bar.bar-nav
 .menu-bar
   ul.list-unstyled.text-u-c
     li
-      a(href='/mobile/find-tours.html')
+      a(href='/mobile/find-tours.html', data-toggle="modal", data-target="#popupFindTours")
         i.ico.ico-tours
         span.block Find Tour
     li.b-r.b-l
-      a(href='/mobile/find-flights.html')
+      a(href='/mobile/find-flights.html', data-toggle="modal", data-target="#popupFindFlight")
         i.ico.ico-flight
         span.block Find Flight
     li
-      a(href='/mobile/find-hotels.html')
+      a(href='/mobile/find-hotels.html', data-toggle="modal", data-target="#popupFindHotels")
         i.ico.ico-hotel
         span.block Find Hotel
   .clearfix
